force-app/main/default/objects/Rejection__c/Rejection__c.object-meta.xml
<CustomObject>
    <description>Used to mark a collection of defects on submitted Registrations.</description>
    <label>Rejection</label>
    <nameField>
        <displayFormat>RJ-{0000000}</displayFormat>
        <label>Rejection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rejections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>