force-app/main/default/objects/Rejection__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( Registration__r.RecordType.DeveloperName = "Child Performer Services",

(Registration__r.Registration_Account__r.Mailing_Street__c +" "+ Registration__r.Registration_Account__r.Mailing_Address_Line_2__c +
BR()
+ Registration__r.Registration_Account__r.Mailing_City__c+" "+
TEXT(Registration__r.Registration_Account__r.Mailing_State__c)+" "+
Registration__r.Registration_Account__r.Mailing_Zip_Code__c)
,

(Registration__r.Mailing_Address_Line_1__c+" "+
Registration__r.Mailing_Address_Line_2__c+
BR()
+ Registration__r.Mailing_City__c+" "+
TEXT(Registration__r.Mailing_State__c)+" "+
Registration__r.Mailing_Postal_Code__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>