force-app/main/default/objects/Rejection__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <formula>Registration__r.Application_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>