force-app/main/default/objects/Rejection__c/fields/Defect_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Defect_Text_2__c</fullName>
    <formula>IF(Registration_Type__c = "Car Wash", "IT IS ILLEGAL TO OPERATE AS A CAR WASHING &amp; POLISHING BUSINESS unless you have a registration in your possession. Violators shall be guilty of a misdemeanor.", 
IF(Registration_Type__c = "Garment Manufacturers and Contractors", "IT IS ILLEGAL TO OPERATE A GARMENT MANUFACTURING/CONTRACTING INDUSTRY BUSINESS unless you have a registration in your possession. Violators shall be guilty of a misdemeanor.", 
IF(Registration_Type__c = "Farm Labor Contractor", "IT IS ILLEGAL TO OPERATE AS A FARM LABOR CONTRACTOR unless you have a valid license in your possession. Violators are guilty of a misdemeanor, punishable by a fine of not more than $1,000.00 or imprisonment in the county jail for no more than six (6) months or both.", 
IF(Registration_Type__c = "Child Performer Services", "IT IS ILLEGAL TO PROVIDE CERTAIN CHILD PERFORMER SERVICES unless you have a permit in your possession. Violators shall be guilty of a misdemeanor.", 
IF(Registration_Type__c = "Talent Agency", "IT IS ILLEGAL TO ENGAGE IN OR CARRY ON THE OCCUPATION OF A TALENT AGENCY without procuring a license from the Labor Commissioner.", "")))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Text 2</label>
    <type>Text</type>
</CustomField>