force-app/main/default/objects/Rejection__c/fields/Defect_Text_3__c.field-meta.xml
<CustomField>
    <fullName>Defect_Text_3__c</fullName>
    <formula>"If you have any questions regarding the above, please call "
+ CASE(Registration_Type__c
, "Car Wash", "(510) 285-3502 or email DLSELicensing@dir.ca.gov"
, "Talent Agency", "(510) 285-3397 email DLSELicensing@dir.ca.gov"
, "Garment Manufacturers and Contractors", "(510) 285-3398 email DLSELicensing@dir.ca.gov"
, "Child Performer Services", "(510) 285-2123 email DLSELicensing@dir.ca.gov"
, "Janitorial", "(510) 879-8333 email DLSELicensing@dir.ca.gov"
, "Farm Labor Contractor", "(559) 248-1893 or email FLC@dir.ca.gov."
,"(510) 285-3502")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Text 3</label>
    <type>Text</type>
</CustomField>