force-app/main/default/objects/Rejection__c/fields/DLSE_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Contact_Details__c</fullName>
    <description>Used to populate the header of defect letters (conga templates.)</description>
    <formula>"State of California, " &amp; $CustomMetadata.GovernorName__mdt.Governor_Full_Name.FirstName__c 
&amp; " " 
&amp; IF ( ISBLANK($CustomMetadata.GovernorName__mdt.Governor_Full_Name.MiddleInitial__c), "", $CustomMetadata.GovernorName__mdt.Governor_Full_Name.MiddleInitial__c &amp;" ") 
&amp; $CustomMetadata.GovernorName__mdt.Governor_Full_Name.LastName__c 
&amp; IF ( ISBLANK ($CustomMetadata.GovernorName__mdt.Governor_Full_Name.Suffix__c), ", Governor" , " "
&amp; $CustomMetadata.GovernorName__mdt.Governor_Full_Name.Suffix__c &amp; ", Governor")
&amp; BR()
&amp; "Department of Industrial Relations"
&amp; BR()
&amp; "Division of Labor Standards Enforcement"
&amp; BR()
&amp; IF( (Registration_Type__c = "Entertainment Work" || Registration_Type__c = "Permit to Employ Minors"),
"Entertainment Work Permit Unit"
&amp; BR() &amp; "6150 Van Nuys Blvd. #100"
&amp; BR() &amp; "Van Nuys, CA 91401"
&amp; BR() &amp; "Phone: " &amp; Registration__r.Registration_Office_Telephone_Number__c
&amp; BR()
,
""
)

&amp; IF( (Registration_Type__c = "Farm Labor Contractor"),
 BR()
&amp; "Registration Services Unit"
&amp; BR() &amp; "770 E. Shaw Ave., Suite 222"
&amp; BR() &amp; "Fresno, CA 93710"
&amp; BR() &amp; "Phone: (559) 248-1893"
&amp; BR() 
&amp; "Or"
,
""
)
&amp; BR()    
&amp; "Registration Services Unit"
&amp; BR() &amp; "1515 Clay Street, Ste. 1902"
&amp; BR() &amp; "Oakland, CA 94612"
&amp; BR() &amp; "Phone: " &amp; Registration__r.Registration_Office_Telephone_Number__c
&amp; BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLSE Contact Details</label>
    <type>Text</type>
</CustomField>