force-app/main/default/objects/Rejection__c/fields/DLSE_Defect_Text__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Defect_Text__c</fullName>
    <formula>IF( (Registration_Type__c = "Entertainment Work" || Registration_Type__c = "Permit to Employ Minors"),

""
,

"If you submitted a paper application, please resubmit by mail to the address in the attached notice. Alternatively you may fax or email the requested item(s) to listed fax and email address below. Be sure to include your Registration number on all items you submit."
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLSE_Defect_Text</label>
    <type>Text</type>
</CustomField>