force-app/main/default/objects/Rejection__c/fields/General_Notes_Instructions__c.field-meta.xml
<CustomField>
    <fullName>General_Notes_Instructions__c</fullName>
    <defaultValue>"Your application is in pending status because it has some missing or incorrect information. Please see the information below for more details and resubmit corrections."</defaultValue>
    <label>General Notes &amp; Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>