force-app/main/default/objects/Rejection__c/fields/Registration_Office_Email__c.field-meta.xml
<CustomField>
    <fullName>Registration_Office_Email__c</fullName>
    <description>Form LR field "Registration Office Email"</description>
    <formula>Registration__r.Registration_Office_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Office Email</label>
    <type>Text</type>
</CustomField>