force-app/main/default/objects/Rejection__c/fields/Rejection_Letter_Follow_Up_PDF__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Letter_Follow_Up_PDF__c</fullName>
    <formula>"&amp;id=" + Id +
"&amp;templateid=a0n35000000K0rx" +
"&amp;defaultpdf=1" +
"&amp;queryid=[Rejections]a0m350000002lLw,[RejectionDefect]a0m350000002lLx,[Manager]a0mt00000000sKt" +
"&amp;EmailTemplateId=[00Xr0000000MXml]" +
"&amp;EmailAdditionalTo=" + Registration__r.Applicant__r.Email +
"&amp;EmailRelatedToId=" +  Registration__r.Id  +
"&amp;qmode=SendEmail" +
"DS7=2"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejection Letter Follow Up PDF</label>
    <type>Text</type>
</CustomField>