force-app/main/default/objects/Rejection__c/fields/Times_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Times_Rejected__c</fullName>
    <label>Times Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Rejection</fullName>
            </value>
            <value>
                <fullName>2nd Rejection</fullName>
            </value>
            <value>
                <fullName>3rd Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>