force-app/main/default/objects/Rejection__c/fields/X1st_Defect_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>X1st_Defect_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Defect Letter Sent?</label>
    <type>Checkbox</type>
</CustomField>